# examsolver

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  CONVENTIONS.md  FRONTEND.md  README.md  ROADMAP.md  SKILL_PLAYBOOK.md  VISION.md  pyproject.toml
docs/: ASSESSMENT-2026-05-29.md  data-flow.md  gpt-oss-setup.md  m1-acceptance.md  m2-acceptance.md  m2-routing-eval.md  m3-acceptance.md  m4-acceptance.md  textbook-indexing.md  troubleshooting.md
frontend/: .npmrc  DESIGN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx  study.module.css  subpage.module.css
frontend/app/components/: FormulaDraftEditor.tsx  MathText.tsx  SolveAnswerBlock.tsx  SolveDiagramBlock.tsx  SolveDiagramCanvas.tsx  SolveExplanationBlock.tsx  SolveFormulasBlock.tsx  SolveNoteBlocks.tsx  SolveNotePanel.tsx  SolveProblemBlock.tsx  SolveStepsBlock.tsx  SolveTextBlock.tsx  SolveWorkbench.module.css  SolveWorkbench.tsx  SolveWorkbenchComposer.tsx  SolveWorkbenchSidebar.tsx  SolveWorkbenchStatusPanel.tsx  mathRendering.ts  (+5 more)
frontend/lib/: api.ts  types.ts
scripts/: baseline_eval.py  golden_eval.py  index_textbook.py  preflight_models.py  smoke.py  start-examsolver-with-gemma.ps1  start-examsolver-with-gpt-oss.ps1  start-gemma4-local-llm.ps1  start-gpt-oss-local-llm.ps1
src/examsolver/: __init__.py  config.py  runtime_settings.py
tests/: conftest.py  test_runtime_settings.py
tests/_helpers/: fake_llm.py  test_fake_llm.py
tests/api/: test_library_routes.py  test_mistakes.py  test_routes.py  test_settings.py
tests/contracts/: test_solve_contract.py  test_solve_contract_shape.py
tests/fixtures/: force_balance_regression.json
tests/graph/: test_agentic_routing.py  test_graph.py  test_mechanism_vision_e2e.py  test_nodes.py  test_ocr_node.py  test_router_agent.py  test_skill_nodes.py  test_state.py
tests/llm/: test_base.py  test_claude_client.py  test_local_gguf.py  test_openai_compatible.py
tests/multimodal/: test_fallback.py  test_ocr_paddle.py  test_vlm_claude.py
tests/notes/: test_flashcard.py  test_note_builder.py
tests/pipeline/: test_classifier.py  test_dispatcher.py  test_normalizer.py
tests/rag/: test_chunker.py  test_embedder.py  test_index_textbook.py  test_retriever.py  test_store.py
tests/services/: test_agentic_solve.py  test_explanation.py  test_plot.py  test_solve_service.py
tests/skills/: test_registry.py  test_unknown_skill.py
tests/storage/: test_documents_repo.py  test_history_repo.py  test_mistakes_repo.py  test_uploads.py
(+111 files in other folders)
