[project]
name = "examsolver"
version = "0.0.1"
description = "A deterministic single-question solver core."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75",
    "fastapi>=0.115",
    "httpx>=0.28",
    "langgraph>=0.2",
    "openai>=2",
    "paddleocr>=3",
    "paddlepaddle>=3",
    "pillow>=11",
    "pydantic>=2",
    "pypdf>=6",
    "python-docx>=1.1",
    "sentence-transformers>=5",
    "sqlite-vec>=0.1",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]
llm = ["anthropic>=0.75", "langchain-anthropic>=1", "openai>=2"]
ocr = ["paddleocr>=3", "paddlepaddle>=3"]
rag = ["pypdf>=6", "sentence-transformers>=5", "sqlite-vec>=0.1"]
export = ["pillow>=11", "python-docx>=1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
